サーバーサイドレンダリングを設定

--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -1,1 +1,1 @@
-= react_component('CommentBox',url: comments_path,pollInterval: 20)
+= react_component('CommentBox',{url: comments_path}, {prerender: true})
