初期値をpropsで渡すように変更

--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -1,1 +1,1 @@
-= react_component('CommentBox',{url: comments_path}, {prerender: true})
+= react_component('CommentBox',{url: comments_path,data:@comments}, {prerender: true})
